--- a/web/style.css
+++ b/web/style.css
@@ -85,6 +85,14 @@ a:hover{
 	text-align: center;
 	opacity: 0.4;
 }
+table{
+    border-collapse: collapse;
+  }
+  
+  th, td{
+    border: 1px solid rgb(255, 255, 255);
+    padding: 10px;
+  }
 
 
 
